metrics/prometheus/persistence-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: ${PING_IDENTITY_K8S_NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        volumeMounts:
        - mountPath: /prometheus
          name: prometheus-storage-volume
      volumes:
      - name: prometheus-storage-volume
        persistentVolumeClaim:
          claimName: prometheus-storage-claim
