metrics/prometheus/prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: ${PING_IDENTITY_K8S_NAMESPACE}
spec:
  ports:
  - name: prometheus
    port: 9090
  selector:
    app: prometheus
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: ${PING_IDENTITY_K8S_NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - args:
        - --config.file=/etc/prometheus/prometheus.yml
        - --web.enable-lifecycle
        # - --storage.tsdb.retention.size=10GB
        # - --storage.tsdb.retention.time=30d
        image: prom/prometheus:v2.15.2
        securityContext:
          runAsNonRoot: false
          runAsUser: 0
        name: prometheus
        ports:
        - containerPort: 9090
        resources:
          limits:
            cpu: 500m
            memory: 2500Mi
          requests:
            cpu: 100m
            memory: 512Mi
        volumeMounts:
        - mountPath: /etc/prometheus/
          name: prometheus-config-volume
      serviceAccountName: prometheus
      volumes:
      - configMap:
          name: prometheus-config
        name: prometheus-config-volume
