metrics/prometheus/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-public
  labels:
    app: prometheus
  name: prometheus-ingress
  namespace: ${PING_IDENTITY_K8S_NAMESPACE}
spec:
  rules:
  - host: prometheus-${PING_IDENTITY_DEVOPS_DNS_ZONE}
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
        path: /
  tls:
  - hosts:
    - prometheus-${PING_IDENTITY_DEVOPS_DNS_ZONE}
    secretName: tls-secret
